画像登録できるようにした&リファクタリング
